--- a/web.config
+++ b/web.config
@@ -31,6 +31,7 @@
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
           </conditions>
+          <match url="^(.*)" />
           <action type="Rewrite" url="server/index.js"/>
         </rule>
       </rules>
