--- a/web.config
+++ b/web.config
@@ -12,13 +12,13 @@
     <webSocket enabled="false" />
     <handlers>
       <!-- Indicates that the server.js file is a Node.js site to be handled by the iisnode module -->
-      <add name="iisnode" path="server/index.js" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="server" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
         <!-- Do not interfere with requests for node-inspector debugging -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^server/index.js\/debug[\/]?" />
+          <match url="^server\/debug[\/]?" />
         </rule>
 
         <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
@@ -32,7 +32,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
           </conditions>
           <match url="^(.*)" />
-          <action type="Rewrite" url="server/index.js"/>
+          <action type="Rewrite" url="server"/>
         </rule>
       </rules>
     </rewrite>
