--- a/web.config
+++ b/web.config
@@ -21,6 +21,15 @@
           <match url="^server\/debug[\/]?" />
         </rule>
 
+         <!-- <rule name="Redirect to https" stopProcessing="true">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTPS}" pattern="Off"/>
+            <add input="{REQUEST_METHOD}" pattern="^get$|^head$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+        </rule> -->
+
         <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
         <rule name="StaticContent">
           <action type="Rewrite" url="public{REQUEST_URI}"/>
